--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sngular</groupId>
-	<artifactId>ProjectTFG</artifactId>
+	<artifactId>skilltree</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ProjectTFG</name>
-	<description>Demo project for Spring Boot</description>
+	<name>SkillTree</name>
+	<description>SkillTree Gateway for Sngular Skills Management</description>
 	<properties>
 		<java.version>19</java.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
@@ -87,6 +87,28 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			 <plugin>
+                <groupId>net.coru</groupId>
+                <artifactId>scs-multiapi-maven-plugin</artifactId>
+                <version>4.1.0</version>
+                <executions>
+                    <execution>
+                        <id>openapi</id>
+                        <goals>
+                            <goal>openapi-generation</goal>
+                        </goals>
+                        <configuration>
+                            <specFiles>
+                                <specFile>
+                                    <filePath>${project.basedir}/src/main/resources/api/skill-tree-api.yml</filePath>
+									<apiPackage>com.sngular.skilltree.api</apiPackage>
+									<modelPackage>com.sngular.skilltree.api.model</modelPackage>
+									<modelNameSuffix>DTO</modelNameSuffix>
+                            </specFiles>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
