--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.coru</groupId>
+			<artifactId>scs-multiapi-maven-plugin</artifactId>
+			<version>4.2.2</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -88,9 +93,9 @@
 				</configuration>
 			</plugin>
 			 <plugin>
-                <groupId>net.coru</groupId>
-                <artifactId>scs-multiapi-maven-plugin</artifactId>
-                <version>4.1.0</version>
+				 <groupId>net.coru</groupId>
+				 <artifactId>scs-multiapi-maven-plugin</artifactId>
+				 <version>4.2.2</version>
                 <executions>
                     <execution>
                         <id>openapi</id>
@@ -112,5 +117,4 @@
             </plugin>
 		</plugins>
 	</build>
-
 </project>
