--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -616,7 +616,7 @@ paths:
       description: Returns an individual skill as well as the skills under it, identified by a code
       operationId: getSkillByCode
       parameters:
-        - name: skillcode
+        - name: skillCode
           in: path
           required: true
           schema:
@@ -1060,8 +1060,8 @@ components:
           type: string
         endDate:
           type: string
-        client:
-          $ref: "#/components/schemas/client"
+        clientCode:
+          type: string
         area:
           type: string
         domain:
@@ -1073,7 +1073,7 @@ components:
         skills:
           type: array
           items:
-            $ref: "#/components/schemas/skill"
+            type: string
         roles:
           type: array
           items:
@@ -1093,7 +1093,7 @@ components:
         skills:
           type: array
           items:
-            $ref: "#/components/schemas/skill"
+            type: string
         roles:
             type: array
             items:
@@ -1122,13 +1122,13 @@ components:
       required:
         - code
         - type
-        - subskill
+        - subSkill
       properties:
         code:
           type: string
         name:
           type: string
-        subskill:
+        subSkill:
           type: array
           items:
             $ref: "#/components/schemas/skill"
@@ -1157,14 +1157,16 @@ components:
           type: string
         name:
           type: string
-        project:
-          $ref: "#/components/schemas/project"
-        client:
-          $ref: "#/components/schemas/client"
+        projectCode:
+          type: string
+        clientCode:
+          type: string
         openingDate:
           type: string
+          format: date
         closingDate:
           type: string
+          format: date
         priority:
           type: string
         mode:
@@ -1183,12 +1185,17 @@ components:
           type: string
         priority:
           type: string
+        closingDate:
+          type: string
+          format: date
         mode:
           $ref: "#/components/schemas/mode"
         office:
           type: string
         role:
           type: string
+        skills:
+          $ref: "#/components/schemas/skills"
 
     mode:
       type: string
@@ -1273,27 +1280,60 @@ components:
       type: object
       required:
         - code
+        - candidate
         - opportunity
         - skills
       properties:
         code:
           type: string
-        opportunity:
-          $ref: "#/components/schemas/opportunity"
+        candidateCode:
+          type: string
+        opportunityCode:
+          type: string
         skills:
           type: array
           items:
-            $ref: "#/components/schemas/skill"
-
+            type: object
+            required:
+            - code
+            - level
+            - experience
+            properties:
+              code:
+                type: string
+              level:
+                type: integer
+              experience:
+                type: string
+                enum:
+                  - HIGH
+                  - MEDIUM
+                  - CONFIDENT
+                  - LOW
     patchedCandidate:
       type: object
       properties:
-        opportunity:
-          $ref: "#/components/schemas/opportunity"
         skills:
           type: array
           items:
-            $ref: "#/components/schemas/skill"
+            type: object
+            required:
+            - code
+            - level
+            - experience
+            properties:
+              code:
+                type: string
+              level:
+                type: string
+                enum:
+                  - HIGH
+                  - MEDIUM
+                  - CONFIDENT
+                  - LOW
+              experience:
+                type: integer
+                format: int32
 
     skills:
       type: object
@@ -1317,7 +1357,8 @@ components:
             - MEDIUM
             - LOW
         min_exp:
-          type: string
+          type: integer
+          format: int32
 
     peopleList:
       type: array
@@ -1347,6 +1388,7 @@ components:
           type: string
         birthDate:
           type: string
+          format: date
         title:
           $ref: "#/components/schemas/title"
         evolution:
@@ -1358,6 +1400,7 @@ components:
               type: string
             fromDate:
               type: string
+              format: date
         knows:
           type: object
           properties:
@@ -1449,8 +1492,10 @@ components:
           type: string
         fromDate:
           type: string
+          format: date
         endDate:
           type: string
+          format: date
 
     error:
       type: object
